--- a/src/scss/menu/block/common.scss
+++ b/src/scss/menu/block/common.scss
@@ -39,7 +39,7 @@
 			.icon.toggle { background-image: url('~img/icon/menu/action/block/toggle1.svg'); }
 			
 			.icon.file { background-image: url('~img/icon/menu/action/block/file1.svg'); }
-			.icon.picture { background-image: url('~img/icon/menu/action/block/picture1.svg'); }
+			.icon.image { background-image: url('~img/icon/menu/action/block/image1.svg'); }
 			.icon.video { background-image: url('~img/icon/menu/action/block/video1.svg'); }
 			.icon.bookmark { background-image: url('~img/icon/menu/action/block/bookmark1.svg'); }
 			.icon.code { background-image: url('~img/icon/menu/action/block/code1.svg'); }
