--- a/src/scss/menu/block/icon.scss
+++ b/src/scss/menu/block/icon.scss
@@ -21,7 +21,7 @@
 		.icon.existing { background-image: url('~img/icon/menu/action/block/existing0.svg'); }
 		
 		.icon.file { background-image: url('~img/icon/menu/action/block/file0.svg'); }
-		.icon.picture { background-image: url('~img/icon/menu/action/block/picture0.svg'); }
+		.icon.image { background-image: url('~img/icon/menu/action/block/image0.svg'); }
 		.icon.video { background-image: url('~img/icon/menu/action/block/video0.svg'); }
 		.icon.bookmark { background-image: url('~img/icon/menu/action/block/bookmark0.svg'); }
 		.icon.code { background-image: url('~img/icon/menu/action/block/code0.svg'); }
