--- a/src/scss/component/iconObject.scss
+++ b/src/scss/component/iconObject.scss
@@ -102,18 +102,16 @@
 .iconObject.c28 { width: 28px; height: 28px; }
 .iconObject.c32 { width: 32px; height: 32px; }
 .iconObject.c40 { width: 40px; height: 40px; }
-.iconObject.c48 { display: block; width: 48px; height: 48px; border-radius: 100%; overflow: hidden; background-color: #f3f2ec; }
-.iconObject.c64 { display: block; width: 64px; height: 64px; border-radius: 100%; overflow: hidden; background-color: #f3f2ec; }
+.iconObject.c48 { display: block; width: 48px; height: 48px; border-radius: 0px; overflow: hidden; }
+.iconObject.c64 { display: block; width: 64px; height: 64px; border-radius: 14px; overflow: hidden; background-color: #f3f2ec; }
 .iconObject.c96 { display: block; width: 96px; height: 96px; border-radius: 20px; overflow: hidden; background-color: #f3f2ec; }
 .iconObject.c128 { display: block; width: 128px; height: 128px; border-radius: 20px; overflow: hidden; background-color: #f3f2ec; }
-
-.iconObject.c48.isPage, .iconObject.c48.isFile, .iconObject.c48.isImage, .iconObject.c48.isArchive { border-radius: 0px; background-color: unset; }
 
 .iconObject.c48, .iconObject.c64 {
 	.iconImage { border-radius: 100%; width: 100%; height: 100%; margin: 0px; left: 0px; top: 0px; }
 }
 .iconObject.c48.isPage, .iconObject.c48.isImage {
-	.iconImage { border-radius: 14px; }
+	.iconImage { border-radius: 8px; }
 }
 
 .iconObject.isUser { border-radius: 100%; }
