--- a/src/scss/popup/store.scss
+++ b/src/scss/popup/store.scss
@@ -20,7 +20,7 @@
 			}
 		}
 
-		.body { width: 100%; height: 100%; padding: 96px 96px 56px 96px; }
+		.body { width: 100%; height: 100%; padding: 96px 96px 56px 96px; overflow-y: auto; }
 		.body {
 			.mid { text-align: center; margin-bottom: 57px; }
 			.mid {
@@ -32,7 +32,7 @@
 				}
 			}
 
-			.tabs { white-space: nowrap; }
+			.tabs { white-space: nowrap; margin-bottom: 26px; }
 			.tabs {
 				.item { 
 					display: inline-block; margin-right: 20px; font-weight: 700; cursor: pointer; font-size: 18px; line-height: 26px; letter-spacing: -0.16px;
@@ -40,6 +40,26 @@
 				}
 				.item.active { color: $colorBlack; }
 				.item:last-child { margin: 0px; }
+			}
+
+			.items {
+				.item.isType { 
+					display: inline-block; vertical-align: top; width: calc(50% - 16px); position: relative; padding-left: 80px; height: 64px; 
+					margin: 0px 32px 32px 0px;
+				}
+				.item.isType:nth-child(2n + 2) { margin-right: 0px; }
+
+				.item.isType {
+					.iconObject { position: absolute; left: 0px; top: 0px; }
+					.info { height: 100%; position: relative; }
+					.info {
+						.name { font-weight: 500; margin-bottom: 2px; }
+						.descr { @include text-small; color: $colorDarkGrey; }
+						.line { width: 100%; height: 1px; background: #eae9e0; position: absolute; left: 0px; bottom: -16px; }
+					}
+
+					.button { height: 28px; line-height: 24px; position: absolute; right: 0px; top: 50%; margin-top: -14px; }
+				}
 			}
 		}
 	}
