--- a/src/scss/component/iconObject.scss
+++ b/src/scss/component/iconObject.scss
@@ -11,6 +11,7 @@
 	.iconCommon.c22, .smileImage.c22, .iconImage.c22, .iconFile.c22, .iconCheckbox.c22 { @include pos-abs-mid; width: 22px; height: 22px; margin: -11px 0px 0px -11px; }
 	.iconCommon.c24, .smileImage.c24, .iconImage.c24, .iconFile.c24, .iconCheckbox.c24 { @include pos-abs-mid; width: 24px; height: 24px; margin: -12px 0px 0px -12px; }
 	.iconCommon.c28, .smileImage.c28, .iconImage.c28, .iconFile.c28, .iconCheckbox.c28 { @include pos-abs-mid; width: 28px; height: 28px; margin: -14px 0px 0px -14px; }
+	.iconCommon.c30, .smileImage.c30, .iconImage.c30, .iconFile.c30, .iconCheckbox.c30 { @include pos-abs-mid; width: 30px; height: 30px; margin: -15px 0px 0px -15px; }
 	.iconCommon.c32, .smileImage.c32, .iconImage.c32, .iconFile.c32, .iconCheckbox.c32 { @include pos-abs-mid; width: 32px; height: 32px; margin: -16px 0px 0px -16px; }
 	.iconCommon.c40, .smileImage.c40, .iconImage.c40, .iconFile.c40, .iconCheckbox.c40 { @include pos-abs-mid; width: 40px; height: 40px; margin: -20px 0px 0px -20px; }
 	.iconCommon.c48, .smileImage.c48, .iconImage.c48, .iconFile.c48, .iconCheckbox.c48 { @include pos-abs-mid; width: 48px; height: 48px; margin: -24px 0px 0px -24px; }
@@ -25,6 +26,7 @@
 		.image { position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; object-fit: cover; }
 	}
 
+	.iconUser.c16 { line-height: 16px; font-size: 10px; }
 	.iconUser.c20 { line-height: 20px; font-size: 12px; }
 	.iconUser.c40 { line-height: 40px; font-size: 18px; }
 	.iconUser.c48 { line-height: 48px; font-size: 28px; }
@@ -97,6 +99,7 @@
 	.iconEmoji.canEdit.c48:hover, .iconEmoji.canEdit.c64:hover { background-color: #ebe9e0; }
 	.iconEmoji.canEdit.c48.active, .iconEmoji.canEdit.c64.active { background-color: #ebe9e0; }
 }
+.iconObject.c16 { width: 16px; height: 16px; }
 .iconObject.c24 { width: 24px; height: 24px; }
 .iconObject.c26 { width: 26px; height: 26px; }
 .iconObject.c28 { width: 28px; height: 28px; }
@@ -113,6 +116,8 @@
 .iconObject.c48.isPage, .iconObject.c48.isImage {
 	.iconImage { border-radius: 8px; }
 }
+
+.iconObject.c48.isRelation { border-radius: 8px; background-color: #f3f2ec; }
 
 .iconObject.isUser { border-radius: 100%; }
 
