--- a/src/scss/popup/store.scss
+++ b/src/scss/popup/store.scss
@@ -43,29 +43,41 @@
 			}
 
 			.items {
-				.item.isType { 
-					display: inline-block; vertical-align: top; width: calc(50% - 16px); position: relative; height: 64px; 
-					margin: 0px 32px 32px 0px; cursor: pointer; padding: 0px 0px 0px 80px;
-				}
-				.item.isType:nth-child(2n + 2) { margin-right: 0px; }
+				.item { display: inline-block; vertical-align: top; position: relative; cursor: pointer; }
 
-				.item.isType {
-					.iconObject { position: absolute; left: 0px; top: 0px; }
+				.item {
+					.iconObject.isObjectType, .iconObject.isRelation { position: absolute; left: 0px; top: 0px; }
+					.iconObject.isUser { vertical-align: middle; margin: -1px 4px 0px 0px; }
 
 					.info { height: 100%; position: relative; }
 					.info {
-						.name { font-weight: 500; margin-bottom: 2px; @include text-overflow-nw; }
+						.name { font-weight: 500; @include text-overflow-nw; }
 						.descr { @include text-small; color: $colorDarkGrey; @include text-overflow-nw; }
-						.line { width: 100%; height: 1px; background: #eae9e0; position: absolute; left: 0px; bottom: -16px; }
+						.author { @include text-small; color: #6c6a5f; line-height: 18px; }
+						.line { width: 100%; height: 1px; background: #eae9e0; position: absolute; left: 0px; }
 					}
 
 					.button { height: 28px; line-height: 24px; position: absolute; right: 0px; top: 50%; margin-top: -14px; display: none; }
 				}
 
-				.item.isType.market {
+				.item.market {
 					.info { padding-right: 80px; }
 					.button { display: block; }
 				}
+
+				.item.isType { margin: 0px 32px 32px 0px; width: 464px; height: 64px; padding-left: 80px; }
+				.item.isType:nth-child(2n + 2) { margin-right: 0px; }
+				.item.isType {
+					.line { bottom: -16px; }
+				}
+
+				.item.isRelation { width: 300px; padding-left: 60px; height: 48px; margin: 0px 30px 16px 0px; }
+				.item.isRelation:nth-child(3n + 3) { margin-right: 0px; }
+				.item.isRelation {
+					.line { bottom: -8px; }
+					.item:nth-child(2n + 2) { margin-right: 0px; }
+				}
+
 			}
 		}
 
