--- a/src/scss/debug.scss
+++ b/src/scss/debug.scss
@@ -28,4 +28,16 @@ html.debug {
 	.blockLast { background: rgba(0,0,255,0.1); }
 	
 	.focusable.isFocused { border: 1px solid rgba(255,127,127,0.3); }
+
+	.pageMainObjectType {
+		.wrapper {
+			.section.relation {
+				.item {
+					.icon { background: rgba(0,0,255,0.1); }
+					.name { background: rgba(0,0,255,0.1); }
+					.value { background: rgba(0,0,255,0.1); }
+				}
+			}
+		}
+	}
 } 
