--- a/src/scss/page/main/objectType.scss
+++ b/src/scss/page/main/objectType.scss
@@ -3,10 +3,33 @@
 .pageMainObjectType {
 	.wrapper { width: 704px; margin: 0px auto; padding: 128px 0px 80px 0px; }
 	.wrapper {
-		.head { display: flex; }
+		.head { display: flex; margin-bottom: 35px; }
 		.head {
 			.side.left { width: 96px; flex-shrink: 0; margin-right: 32px; }
 			.side.right { width: calc(100% - 128px); }
+
+			.title { @include text-header1; margin-bottom: 5px; }
+			.descr { @include text-paragraph; }
+		}
+
+		.section { margin-bottom: 32px; }
+		.section:last-child { margin: 0px; }
+
+		.section {
+			.title { @include text-header3; margin-bottom: 14px; }
+		}
+
+		.section.relation {
+			.item { display: flex; }
+			.item {
+				.clickable { width: 228px; padding: 4px; display: flex; cursor: pointer; transition: $transitionFast; border-radius: 4px; }
+				.clickable:hover { background: rgba(172,169,150,0.15); }
+
+				.icon { flex-shrink: 0; width: 20px; height: 20px; margin-right: 8px; }
+				.name { width: 200px; @include text-overflow-nw; line-height: 20px; color: #6c6a5f; }
+				.value { color: $colorDarkGrey; padding: 4px; line-height: 20px; cursor: pointer; transition: $transitionFast; border-radius: 4px; }
+				.value:hover { background: rgba(172,169,150,0.15); }
+			}
 		}
 	}
 }
