--- a/src/scss/page/main/objectType.scss
+++ b/src/scss/page/main/objectType.scss
@@ -31,5 +31,32 @@
 				.value:hover { background: rgba(172,169,150,0.15); }
 			}
 		}
+
+		table { width: 100%; border-collapse: collapse; border-bottom: 1px solid #eae9e0; table-layout: fixed; border-top: 1px solid #eae9e0; }
+		table {
+			.cellHead { 
+				text-align: left; color: #6c6a5f; padding: 14px 0px 14px 14px; white-space: nowrap; font-weight: 400; line-height: 20px; position: relative; 
+				@include text-overflow-nw; cursor: grab;
+			}
+			.cellHead {
+				.name { 
+					display: inline-block; line-height: 20px; height: 20px; vertical-align: top; width: 100%; 
+					@include text-overflow-nw; border-right: 1px solid #eae9e0;
+				}
+			}
+			.cellHead:last-child {
+				.name { border: 0px; }
+			}
+
+			tbody { border-top: 1px solid #eae9e0; }
+
+			.cellContent { width: 100%; overflow: hidden; height: 20px; line-height: 20px; }
+			.cellContent.c-object {
+				.wrap { white-space: nowrap; }
+			}
+
+			.cell { padding: 14px; border-bottom: 1px solid #eae9e0; vertical-align: top; position: relative; word-break: break-word; }
+			.cell.c-select { padding-bottom: 8px; }
+		}
 	}
 }
