--- a/src/scss/page/main/index.scss
+++ b/src/scss/page/main/index.scss
@@ -72,6 +72,7 @@
 		.item.isTask { padding-left: 40px; }
 		.item.isTask {
 			.iconObject { position: absolute; left: 16px; top: 16px; z-index: 1; margin: 0px; }
+			.name { -webkit-line-clamp: 3; }
 		}
 		
 		.item:hover {
