--- a/src/scss/block/dataview/view/common.scss
+++ b/src/scss/block/dataview/view/common.scss
@@ -22,6 +22,10 @@
 				.cellContent.c-file {
 					.inputWithFile { display: none; }
 				}
+
+				.cellContent.c-object {
+					.element { width: 100%; }
+				}
 			}
 		}
 	}
