--- a/src/scss/block/dataview/cell.scss
+++ b/src/scss/block/dataview/cell.scss
@@ -55,6 +55,9 @@
 
 .cellContent.c-object {
 	.element { display: inline-block; margin: 0px 8px 2px 0px; vertical-align: top; max-width: 100%; line-height: 20px; white-space: nowrap; }
+	.element {
+		.name { line-height: 20px; width: calc(100% - 24px); @include text-overflow-nw; }
+	}
 	.empty { color: $colorDarkGrey; display: none; }
 }
 
