--- a/src/scss/menu/dataview/relation.scss
+++ b/src/scss/menu/dataview/relation.scss
@@ -1,7 +1,19 @@
 @import "~scss/_vars";
 
 .menus {
-	.menu.menuDataviewRelationList { width: 240px; }
+	.menu.menuDataviewRelationSuggest { width: 256px; }
+	.menu.menuDataviewRelationSuggest {
+		.content { padding-bottom: 0px; transition: none; }
+		.wrap { height: 100%; display: flex; flex-direction: column; }
+
+		.items { height: calc(100% - 34px); }
+		.item {
+			.name { @include text-overflow-nw; width: calc(100% - 26px); }
+		}
+		.label { color: $colorDarkGrey; @include text-common; padding: 0px 16px; }
+	}
+
+	.menu.menuDataviewRelationList { width: 288px; }
 	.menu.menuDataviewRelationList {
 		.item { padding: 4px 10px; }
 		.item {
