--- a/src/scss/menu/common.scss
+++ b/src/scss/menu/common.scss
@@ -46,7 +46,7 @@
 		
 		.filter { padding: 3px 14px 0px 14px; }
 		.filter {
-			.inner { position: relative; width: 100%; height: 100%; }
+			.inner { position: relative; width: 100%; height: 28px; }
 			.input { padding: 0px; height: 22px; line-height: 22px; vertical-align: top; border: 0px; width: calc(100% - 24px); }
 			.icon.clear { 
 				width: 20px; height: 20px; background-image: url('~img/icon/clear0.svg'); position: absolute; right: 0px; top: 50%;
@@ -54,7 +54,7 @@
 			}
 			.icon.clear:hover { background-image: url('~img/icon/clear1.svg'); }
 
-			.line { height: 1px; margin: 4px 0px 0px 0px; background: $colorLightGrey; display: block; }
+			.line { height: 1px; margin: 0px; background: $colorLightGrey; display: block; }
 		}
 		.filter.active { .icon.clear { opacity: 1; } }
 
