--- a/src/scss/menu/dataview/common.scss
+++ b/src/scss/menu/dataview/common.scss
@@ -4,6 +4,7 @@
     .menu.menuDataviewRelationType, 
     .menu.menuDataviewRelationList, 
     .menu.menuDataviewRelationEdit, 
+	.menu.menuDataviewRelationSuggest, 
     .menu.menuDataviewViewList,
 	.menu.menuDataviewObjectType,
 	.menu.menuDataviewObjectValues,
