--- a/src/scss/menu/dataview/relation.scss
+++ b/src/scss/menu/dataview/relation.scss
@@ -28,6 +28,7 @@
 	.menu.menuDataviewRelationEdit {
 		.switch { position: absolute; right: 16px; top: 50%; margin-top: -8px; }
 		.button { width: 100%; margin-top: 8px; }
+		.button.grey { cursor: default; }
 
 		.item.disabled { cursor: default; opacity: 1 !important; }
 		.item.disabled:hover::before { opacity: 0; }
