--- a/src/scss/component/editor.scss
+++ b/src/scss/component/editor.scss
@@ -43,7 +43,7 @@
 
 	.featured { @include text-paragraph; color: #6c6a5f; white-space: nowrap; padding-left: 48px; margin-bottom: 32px; }
 	.featured {
-		.bullet { width: 4px; height: 4px; border-radius: 100%; background: #6c6a5f; display: inline-block; vertical-align: middle; margin: 0px 10px; }
+		.bullet { width: 4px; height: 4px; border-radius: 100%; background: #6c6a5f; display: inline-block; vertical-align: middle; margin: -4px 10px 0px 10px; }
 		.element { display: inline-block; }
 		.iconObject { margin-right: 6px; }
 	}
