--- a/src/scss/block/text.scss
+++ b/src/scss/block/text.scss
@@ -19,6 +19,7 @@
 			img { position: static !important; left: auto!important; top: auto !important; margin: 0px !important; vertical-align: middle; margin-top: -4px; }
 		}
 		smile * { display: inline; }
+		smile .loaderWrapper { display: inline-block; }
 
 		emoji { display: inline; user-select: all; }
 		emoji * { user-select: all; }
@@ -33,12 +34,6 @@
 			.space { width: 4px; height: 20px; margin-top: -4px; vertical-align: middle; }
 
 			name { display: inline; white-space: normal; vertical-align: top; position: relative; border-bottom: 1px solid $colorDarkGrey; }
-			/*
-			name::before {
-				content: ""; width: 100%; height: 0px; border-bottom: 1px solid $colorDarkGrey; transition: $transitionFast;
-				position: absolute; bottom: 0px; left: 0px; z-index: 1;
-			}
-			*/
 		}
 
 		mention.withImage {
