--- a/src/scss/block/relation.scss
+++ b/src/scss/block/relation.scss
@@ -12,7 +12,8 @@
 	};
 }
 
-.menus .menu.menuBlockRelationList, 
+.menus .menu.menuBlockRelationList,
+.menus .menu.menuBlockRelationView, 
 .blocks .block.blockRelation {
 	.icon.relation { width: 20px; height: 20px; margin-right: 4px; vertical-align: top; }
 	.icon.expand { display: none; }
