--- a/src/scss/component/header.scss
+++ b/src/scss/component/header.scss
@@ -91,7 +91,8 @@
 		.icon.new-set { width: 20px; height: 20px; opacity: 1; transition: none; margin-right: 4px; }
 		.icon.new-set:hover { background-color: transparent; }
 
-		.icon.plus { opacity: 0; margin-left: 6px; }
+		.icon { margin: 0px; opacity: 0; }
+		.icon.plus { margin-left: 6px; }
 		.icon.plus {
 			.arrow { 
 				width: 8px; height: 8px; background-image: url('~img/icon/header/arrow.svg'); position: absolute; right: -12px;
