--- a/src/scss/menu/block/relation.scss
+++ b/src/scss/menu/block/relation.scss
@@ -44,18 +44,18 @@
 
 	.menu.menuBlockRelationView { width: 640px; }
 	.menu.menuBlockRelationView {
-		.content { padding: 32px 0px; max-height: unset; }
+		.content { padding: 24px 0px; max-height: unset; }
 		.input { border: 0px; padding: 0px; }
 
-		.section > .name { @include text-common; padding: 4px 32px; }
+		.section > .name { @include text-common; padding: 5px 32px; }
 		.section:last-child::after { display: none; }
 		.section::after { margin: 12px 32px 3px 32px; }
 
 		.item { padding: 0px 28px; }
 		.item {
 			.icon.plus { margin-right: 4px; background-image: url('~img/icon/dataview/button/plus0.svg'); }
-			.info { padding: 4px; border-radius: 4px; transition: $transitionFast; margin-right: 4px; }
-			.cell { padding: 4px; }
+			.info { padding: 6px 6px 6px 2px; border-radius: 4px; transition: $transitionFast; margin-right: 4px; }
+			.cell { padding: 6px; }
 			.info:hover { background: rgba(172,169,150,0.15); }
 		}
 		.item * { cursor: pointer; }
