#dn03jb: RelationView add relation logic, moved menuDataviewRelationSuggest to menuRelationSuggest, refactoring

--- a/src/scss/menu/dataview/common.scss
+++ b/src/scss/menu/dataview/common.scss
@@ -4,7 +4,7 @@
     .menu.menuDataviewRelationType, 
     .menu.menuDataviewRelationList, 
     .menu.menuDataviewRelationEdit, 
-	.menu.menuDataviewRelationSuggest, 
+	.menu.menuRelationSuggest, 
     .menu.menuDataviewViewList,
 	.menu.menuDataviewObjectType,
 	.menu.menuDataviewObjectValues,
