--- a/src/scss/menu/block/relation.scss
+++ b/src/scss/menu/block/relation.scss
@@ -20,7 +20,7 @@
 
 		.sides { display: flex; }
 
-		.info { width: 192px; }
+		.info { width: 192px; height: 30px; @include text-overflow-nw; }
 		.info {
 			.name { 
 				display: inline-block; vertical-align: top; @include text-common; line-height: 20px; @include text-overflow-nw; 
@@ -28,11 +28,15 @@
 			}
 		}
 
-		.cell { @include text-common; width: calc(100% - 216px); position: relative; }
+		.cell { @include text-common; width: calc(100% - 192px); position: relative; padding: 6px; }
 
 		.cell.isEditing { padding: 0px; }
 		.cell.isEditing {
 			.cellContent { position: static; padding: 5px 8px !important; }
+		}
+
+		.cell.isEditing.c-object, .cell.isEditing.c-select {
+			.cellContent { height: auto !important; }
 		}
 
 		.cell.isEditing.c-description, .cell.isEditing.c-file { 
@@ -89,10 +93,10 @@
 		.item {
 			.icon.plus { margin-right: 4px; background-image: url('~img/icon/dataview/button/plus0.svg'); }
 
-			.info { padding: 5px 5px 5px 2px; border-radius: 4px; transition: $transitionFast; flex-shrink: 0; }
+			.info { padding: 5px 5px 5px 2px; border-radius: 4px; transition: background 0.2s ease-in-out; flex-shrink: 0; }
 			.info:hover { background: rgba(172,169,150,0.15); }
 
-			.cell { padding: 6px; margin-right: 6px; }			
+			.cell { margin-right: 6px; }			
 
 			.icon.fav { background-image: url('~img/icon/fav0.svg'); cursor: pointer; flex-shrink: 0; }
 			.icon.fav:hover { background-image: url('~img/icon/fav1.svg'); }
