#e71v66: fix list select width

--- a/src/scss/menu/dataview/filter.scss
+++ b/src/scss/menu/dataview/filter.scss
@@ -28,7 +28,7 @@
 					.tagItem { vertical-align: top; margin-top: 1px; }
 				}
 			}
-			.select.isList { margin: 0px; }
+			.select.isList { width: 150px; margin: 0px; }
 			.select.isList.withValues { padding-right: 0px; }
 
 			.txt { height: 28px; line-height: 28px; margin-right: 8px; display: inline-block; vertical-align: top; }
