--- a/src/scss/menu/block/relation.scss
+++ b/src/scss/menu/block/relation.scss
@@ -20,7 +20,7 @@
 
 		.sides { display: flex; }
 
-		.info { width: 192px; height: 30px; @include text-overflow-nw; }
+		.info { width: 192px; @include text-overflow-nw; }
 		.info {
 			.name { 
 				display: inline-block; vertical-align: top; @include text-common; line-height: 20px; @include text-overflow-nw; 
@@ -28,7 +28,7 @@
 			}
 		}
 
-		.cell { @include text-common; width: calc(100% - 192px); position: relative; padding: 6px; }
+		.cell { @include text-common; width: calc(100% - 192px); position: relative; }
 
 		.cell.isEditing { padding: 0px; }
 		.cell.isEditing {
@@ -99,10 +99,10 @@
 		.item {
 			.icon.plus { margin-right: 4px; }
 
-			.info { padding: 5px 5px 5px 2px; border-radius: 4px; transition: background 0.2s ease-in-out; flex-shrink: 0; }
+			.info { height: 30px; padding: 5px 5px 5px 2px; border-radius: 4px; transition: background 0.2s ease-in-out; flex-shrink: 0; }
 			.info:hover { background: rgba(172,169,150,0.15); }
 
-			.cell { margin-right: 6px; }			
+			.cell { padding: 6px; margin-right: 6px; }			
 
 			.icon.fav { margin: 5px 0px 0px 0px; background-image: url('~img/icon/fav0.svg'); cursor: pointer; flex-shrink: 0; }
 			.icon.fav:hover { background-image: url('~img/icon/fav1.svg'); }
