--- a/src/scss/menu/block/relation.scss
+++ b/src/scss/menu/block/relation.scss
@@ -30,13 +30,13 @@
 
 		.cell { @include text-common; width: calc(100% - 192px); position: relative; }
 
-		.cell.isEditing { padding: 0px; }
+		.cell.isEditing { padding: 0px !important; }
 		.cell.isEditing {
 			.cellContent { position: static; padding: 5px 8px !important; }
 		}
 
 		.cell.isEditing.c-object, .cell.isEditing.c-select {
-			.cellContent { height: auto !important; }
+			.cellContent { height: auto !important; padding-bottom: 0px !important; }
 		}
 
 		.cell.isEditing.c-description, .cell.isEditing.c-file { 
@@ -102,10 +102,10 @@
 			.info { height: 30px; padding: 5px 5px 5px 2px; border-radius: 4px; transition: background 0.2s ease-in-out; flex-shrink: 0; }
 			.info:hover { background: rgba(172,169,150,0.15); }
 
-			.cell { padding: 6px; margin-right: 6px; }			
+			.cell { padding: 6px; margin-right: 6px; }
 
 			.icon.fav { margin: 5px 0px 0px 0px; background-image: url('~img/icon/fav0.svg'); cursor: pointer; flex-shrink: 0; }
-			.icon.fav:hover { background-image: url('~img/icon/fav1.svg'); }
+			.icon.fav:hover, .icon.fav.active { background-image: url('~img/icon/fav1.svg'); }
 		}
 		.item * { cursor: pointer; }
 	}
