--- a/src/scss/menu/block/icon.scss
+++ b/src/scss/menu/block/icon.scss
@@ -51,7 +51,7 @@
 		.icon.print { background-image: url('~img/icon/menu/action/print0.svg'); }
 		.icon.history { background-image: url('~img/icon/menu/action/history0.svg'); }
 		.icon.search { background-image: url('~img/icon/menu/action/search0.svg'); }
-		.icon.create { background-image: url('~img/icon/menu/action/create0.svg'); }
+		.icon.set { background-image: url('~img/icon/menu/action/set0.svg'); }
 
 		.icon.clock { background-image: url('~img/icon/menu/action/clock0.svg'); }
 		.icon.settings { background-image: url('~img/icon/menu/action/settings0.svg'); }
