--- a/src/scss/block/dataview/view/board.scss
+++ b/src/scss/block/dataview/view/board.scss
@@ -18,7 +18,7 @@
             }
             .card.add:hover { border-color: $colorBlack; }
             .card.add:hover {
-                .icon { background-image: url('~img/icon/dataview/button/plus1.svg'); }
+                .icon { background-image: url('~img/icon/plus/menu1.svg'); }
             }
         }
     }
