--- a/src/scss/block/dataview/view/grid.scss
+++ b/src/scss/block/dataview/view/grid.scss
@@ -73,7 +73,7 @@
 			}
 			.cell.add:hover { color: $colorBlack; }
 			.cell.add:hover {
-				.icon.plus { background-image: url('~img/icon/dataview/button/plus1.svg'); }
+				.icon.plus { background-image: url('~img/icon/plus/menu1.svg'); }
 			}
 
 			.cell.c-select { padding-bottom: 8px; }
