--- a/src/scss/menu/common.scss
+++ b/src/scss/menu/common.scss
@@ -82,12 +82,19 @@
 		.item.active {
 			.name { z-index: 1; }
 		}
+
+		.item.add { color: $colorDarkGrey; line-height: 20px; }
+		.item.add:hover { color: $colorBlack; }
+		.item.add:hover {
+			.icon.plus { background-image: url('~img/icon/plus/menu1.svg'); }
+		}
 		
 		.item {
 			.name { display: inline-block; vertical-align: top; position: relative; }
 			
-			.icon { width: 20px; height: 20px; margin-right: 6px; vertical-align: top; transition: none; }
+			.icon { width: 20px; height: 20px; margin-right: 6px; vertical-align: top; transition: none; flex-shrink: 0; }
 			.icon.dnd { width: 20px; height: 20px; background-image: url('~img/icon/dnd.svg'); margin: 0px; vertical-align: top; cursor: grab; }
+			.icon.plus { margin-right: 4px; background-image: url('~img/icon/plus/menu0.svg'); }
 			.icon.delete, .icon.more { 
 				width: 24px; height: 24px; background-size: 20px; cursor: pointer; position: absolute; right: 10px; top: 50%; 
 				margin: -12px 0px 0px 0px; border-radius: 4px; opacity: 0; z-index: 1;
